--- a/css/scss/_avatar.scss
+++ b/css/scss/_avatar.scss
@@ -104,7 +104,7 @@ html[data-theme="dark"] {
 			background-color: rgba(60, 168, 118, 1);
 		}
 
-		&.ms-busy {
+		&.ms-off {
 			background-color: rgba(206, 65, 76, 1);
 		}
 
