Article, Label, Typographie
- Article migration.
- Label migration.
- Typographie migration.
- Fix card text color.

--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -51,8 +51,11 @@ a {
 
 @import "_alert";
 @import "avatar";
+@import "article";
 @import "_button";
 @import "_card";
 @import "_helper";
 @import "_grid";
+@import "_label";
+@import "_typography";
 @import "_user";
