--- a/css/scss/_label.scss
+++ b/css/scss/_label.scss
@@ -1,97 +1,117 @@
-/* VARIABLES */
-html{
-  --label-bg: $default-bg;
-  --label-font-color: $color-gray-3;
-  --label-border-color: $color-gray-1;
+/* Variables */
+html {
+	--label-text-color: 36, 36, 36;
 }
 
-html[data-theme='dark'] {
-  --label-bg: $default-bg-dark;
-  --label-font-color: $default-font-color-dark;
-  --label-border-color: $default-bg-dark-lighter;
+html[data-theme="dark"] {
+	--label-text-color: 255, 255, 255;
 }
 
-/* MIXINS */
-@mixin label($textColor,$primaryColor){
+/* Mixins */
+@mixin label($textColor, $primaryColor) {
 	background-color: $primaryColor;
 	color: $textColor;
 	border-color: transparent;
+
+	a {
+		color: #ffffff;
+	}
 }
 
-@mixin label-outline($textColor,$primaryColor,$percentage){
-	background-color: rgba($primaryColor,0.15);
+@mixin label-light($bgColor, $textColor) {
+	background-color: $bgColor;
+	border-color: transparent;
 	color: $textColor;
-	border-color: rgba($primaryColor,0.35);
 }
 
-@mixin color-label{
-	&.ms-info{
-		@include label(#ffffff, $color-blue-1);
-	}
-	
-	&.ms-success{
-		@include label(#ffffff, $color-green-1);
-	}
-	
-	&.ms-danger{
-		@include label(#ffffff, $color-red-1);
-	}
-	
-	&.ms-warning{
-		@include label(#000000, $color-yellow-1);
-	}
-}
+.ms-label {
+	/* General */
+	display: inline;
+	width: auto;
 
-@mixin color-outline-label{
-	&.ms-outline-info{
-		@include label-outline($color-blue-3,$color-blue-1,95);
-	}
-	
-	&.ms-outline-success{
-		@include label-outline($color-green-3,$color-green-1,95);
-	}
-	
-	&.ms-outline-danger{
-		@include label-outline($color-red-3,$color-red-1,95);
-	}
-	
-	&.ms-outline-warning{
-		@include label-outline($color-yellow-3,$color-yellow-1,95);
-	}
-}
+	/* Color */
+	background-color: transparent;
+	color: rgba(var(--label-text-color), 1);
 
-/* BASE */
-.ms-label{
-	background-color: var(--label-bg);
-	border: 1px solid var(--label-border-color);
-	color: var(--label-font-color);
+	/* Border */
+	border: 2px solid rgba(var(--alert-bg-color), 0.3);
+	border-radius: 10px;
+
+	/* Text */
+	line-height: 0.9rem;
 	font-size: 0.9rem;
+
+	/* Margins */
 	margin-right: 0.1rem;
-	padding: 0.1rem 0.3rem;
-	@include border-radius($default-border-radius);
-	
-	/* COLORS */
-	@include color-label;
-	@include color-outline-label;
-	
-	/* SIZES */
-	&.ms-small{
-		padding: 0 0.1rem;
-		font-size: 0.9rem;
+	padding: 0.1rem 0.4rem;
+
+	a {
+		color: var(--main-text-color);
 	}
-	
-	&.ms-medium{
-		padding: 0.2rem 0.4rem;
+
+	&.ms-primary {
+		@include label(#ffffff, rgba(var(--primary-bg-color), 1));
+	}
+
+	&.ms-secondary {
+		@include label(#ffffff, rgba(var(--secondary-bg-color), 1));
+	}
+
+	&.ms-action {
+		@include label(#ffffff, rgba(var(--action-bg-color), 1));
+	}
+
+	&.ms-action2 {
+		@include label(#000000, rgba(var(--action2-bg-color), 1));
+	}
+
+	&.ms-light {
+		&.ms-primary {
+			@include label-light(
+				rgba(var(--primary-bg-color), 0.3),
+				rgba(var(--primary-bg-color), 1)
+			);
+		}
+
+		&.ms-secondary {
+			@include label-light(
+				rgba(var(--secondary-bg-color), 0.3),
+				rgba(var(--secondary-bg-color), 1)
+			);
+		}
+
+		&.ms-action {
+			@include label-light(
+				rgba(var(--action-bg-color), 0.3),
+				rgba(var(--action-bg-color), 1)
+			);
+		}
+
+		&.ms-action2 {
+			@include label-light(
+				rgba(var(--action2-bg-color), 0.3),
+				rgba(var(--action2-bg-color), 1)
+			);
+		}
+	}
+
+	&.ms-small {
+		font-size: 0.7rem;
+		border-radius: 8px;
+		padding: 0.1rem 0.3rem;
+	}
+
+	&.ms-medium {
 		font-size: 1rem;
+		padding: 0.3rem 0.7rem;
 	}
-	
-	&.ms-large{
-		padding: 0.3rem 0.6rem;
-		font-size: 1rem;
+
+	&.ms-large {
+		font-size: 1.2rem;
+		padding: 0.5rem 0.9rem;
 	}
-	
-	/* GLOBAL */
-	&.ms-rounded{
-		@include border-radius(100rem);
+
+	&.ms-rounded {
+		border-radius: 50rem;
 	}
 }
