--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -1,227 +1,156 @@
-/* VARIABLES */
-html{
-  --blockquote-bg: $default-bg-darker;
-  --blockquote-font-color: $default-font-color;
-}
-
-html[data-theme='dark'] {
-  --blockquote-bg: $default-bg-dark;
-  --blockquote-font-color: $default-font-color-dark;
-}
-
-/* MIXINS */
-@mixin mark($textColor,$primaryColor) {
-	background-color: $primaryColor;
-	color: $textColor;
-}
-
-/* TITLES */
-h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6{
-	font-weight: 500;
-}
-h1,.h1 {
-  font-size: 2.2rem;
-}
-h2,.h2 {
-  font-size: 2rem;
-}
-h3,.h3 {
-  font-size: 1.8rem;
-}
-h4,.h4 {
-  font-size: 1.6rem;
-}
-h5,.h5 {
-  font-size: 1.4rem;
-}
-h6,.h6 {
-  font-size: 1.2rem;
-}
-
-/* COLORS */
-.ms-text-info{
-	color: $color-blue-1;
-}
-.ms-text-danger{
-	color: $color-red-1;
-}
-.ms-text-success{
-	color: $color-green-1;
-}
-.ms-text-warning{
-	color: $color-yellow-1;
-}
-.ms-text-gray{
-	color: $color-gray-2;
-}
-.ms-text-white{
-	color: #ffffff;
-}
-.ms-text-black{
-	color: #000000;
-}
-
-/* POSITIONS */
-.ms-text-center{
-	text-align: center;
-}
-.ms-text-right{
-	text-align: right;
-}
-.ms-text-left{
-	text-align: left;
-}
-.ms-text-justify{
-	text-align: justify;
-}
-/* MARK */
- mark,.ms-mark{
+/* Mark */
+mark,
+.ms-mark {
+	/* Color */
 	background-color: #ffe9b3;
-	border-bottom: .05rem solid #ffd367;
+
+	/* Border */
+	border-bottom: 0.05rem solid #ffd367;
+	border-radius: 10px;
+
+	/* Margin */
 	padding: 0.1rem 0.2rem;
-	@include border-radius($default-border-radius);
 }
 
-/* CODE */
-code,.ms-code{
-	background-color: tint($color-red-1, 92);
-	color: $color-red-1;
+/* Code */
+code,
+.ms-code {
+	/* Color */
+	background-color: #e045404d;
+	color: #e04540;
+
+	/* Text */
 	font-size: 90%;
 	font-family: Courier, monospace;
+
+	/* Border */
+	border-radius: 10px;
+
+	/* Margin */
 	padding: 0.1rem 0.2rem;
-	@include border-radius($default-border-radius);
 }
 
-/* TERMINAL */
-kbd,.ms-kbd{
-	background-color: $color-dark-1;
+/* Terminal */
+kbd,
+.ms-kbd {
+	/* Text */
+	background-color: rgba(var(--main-text-color), 1);
 	color: #ffffff;
-	font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+	font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+		"Courier New", monospace;
+
+	/* Border */
+	border-radius: 10px;
+
+	/* Margin */
 	padding: 0.2rem 0.2rem;
-	@include border-radius($default-border-radius);
 }
 
-/* SEMENTIC */
-del,s{
+/* Sementic */
+del,
+s {
 	text-decoration: line-through;
 }
 
-ins,u{
+ins,
+u {
 	text-decoration: underline;
 }
 
-small{
+small {
 	font-size: 80%;
 }
 
-b,strong{
+b,
+strong {
 	font-weight: bold;
 }
 
-i,cite{
+i,
+cite {
 	font-style: italic;
 }
 
-pre i, pre cite{
+pre i,
+pre cite {
 	font-style: normal;
 }
 
-sup{
-	font-size: 75%;
+sup {
+	/* General */
 	position: relative;
-	line-height: 0;
-	vertical-align: baseline;
 	top: -0.4rem;
-}
 
-sub{
-	font-size: 75%;
-	position: relative;
+	/* Text */
 	line-height: 0;
 	vertical-align: baseline;
-	bottom: -0.20rem;
+	font-size: 75%;
 }
 
-/* LIST */
-ul,
-ol {
-  margin: 0.5rem 0 1rem 0.5rem;
-  padding: 0;
+sub {
+	/* General */
+	position: relative;
+	bottom: -0.2rem;
 
-  ul,
-  ol {
-    margin: 1rem;
-  }
-
-  li {
-    margin-top: 1rem;
-  }
+	/* Test */
+	line-height: 0;
+	font-size: 75%;
+	vertical-align: baseline;
 }
 
-ul {
-  list-style: disc inside;
-
-  ul {
-    list-style-type: circle;
-  }
-}
-
-ol {
-  list-style: decimal inside;
-
-  ol {
-    list-style-type: lower-alpha;
-  }
-}
-
-dl {
-  dt {
-    font-weight: bold;
-  }
-  dd {
-    margin: 1rem;
-  }
-}
-
-/* BLOCKQUOTE */
-blockquote, .ms-blockquote{
-	border-left: 4px solid $color-gray-1;
+/* Blockquote */
+blockquote,
+.ms-blockquote {
+	/* Color */
 	background-color: var(--blockquote-bg);
 	color: var(--blockquote-font-color);
-	@include border-right-radius($default-border-radius);
-	margin: $default-margin;
+
+	/* Border */
+	border-left: 4px solid rgba(var(--default-bg-color), 0.2);
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+
+	/* Margin */
+	margin: 1rem;
 	padding: 1rem;
 
-	p{
+	p {
 		margin: 0 0 0 0;
 	}
 
-	&.ms-center{
+	&.ms-center {
 		text-align: center;
 	}
 
-	&.ms-info{
-		border-color: $color-blue-1;
+	&.ms-primary {
+		border-color: rgba(var(--primary-bg-color), 0.5);
 	}
 
-	&.ms-success{
-		border-color: $color-green-1;
+	&.ms-secondary {
+		border-color: rgba(var(--secondary-bg-color), 0.5);
 	}
 
-	&.ms-error{
-		border-color: $color-red-1;
+	&.ms-action {
+		border-color: rgba(var(--action-bg-color), 0.5);
 	}
 
-	&.ms-warning{
-		border-color: $color-yellow-1;
+	&.ms-action2 {
+		border-color: rgba(var(--action2-bg-color), 0.5);
 	}
 }
 
 /* HR */
-hr{
+hr {
+	/* General */
 	width: 100%;
 	height: 1px;
-	background-color: rgba(0,0,0,0.1);
+
+	/* Color */
+	background-color: rgba(0, 0, 0, 0.1);
+
+	/* Border */
 	border: none;
+
+	/* Margin */
 	margin: 1rem 0;
 }
