--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -53,6 +53,7 @@ a {
 @import "avatar";
 @import "article";
 @import "_button";
+@import "_breadcrumbs";
 @import "_card";
 @import "_helper";
 @import "_grid";
